@@ -1,6 +1,7 @@
 anna (1.45) UNRELEASED; urgency=low
 
   * Use dpkg-buildflags.
+  * Handle asprintf failures consistently.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 20 Nov 2012 13:32:13 +0000
 
